test/libsolidity/syntaxTests/imports/name_clash_in_import_contract_struct_4.sol
==== Source: a ====
contract A {}
==== Source: b ====
import {A} from "a";
struct A { uint256 a; }
// ----
// DeclarationError 2333: (b:21-44): Identifier already declared.
